--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     };
 
     cspaceUI({
-      serverUrl: 'http://localhost:8180',
+      serverUrl: 'https://core.dev.collectionspace.org',
       prettyUrls: true,
       plugins: [
         cspaceUIPluginExtLocality(),
